# miao

./: .gitignore  DEPLOY.md  README.md  TODO.md  pyproject.toml
benchmarks/: benchmark.py  generate_report.py  profile_getitem.py  run_all_benchmarks.sh  wandb_gpu_data.json
benchmarks/run_20260513/: results_jiefu_dataloader.csv  results_noiso.csv  results_noiso_dataloader.csv  results_patch256_meta.json
benchmarks/run_20260514/: results_cache_cold_meta.json  results_cache_dataloader.csv  results_cache_meta.json  results_cache_warm.csv  results_h01.csv  results_iso.csv  results_iso_dataloader.csv  results_patch64_dataloader.csv  results_patch64_meta.json
benchmarks/run_20260518/: results_batch.csv  results_batch_batch_sweep.csv  results_jiefu.csv  (+54 more)
examples/: bench_fmt_zarr2.yaml  bench_fmt_zarr3_nosharding.yaml  bench_fmt_zarr3_sharded.yaml  bench_fmt_zarr3_sharded_128chunk.yaml  bench_nisb_seed0_baseline.yaml  bench_nisb_seed0_zarr3.yaml  bench_sweep_zarr2_chunk128.yaml  bench_sweep_zarr2_chunk256.yaml  bench_sweep_zarr2_chunk64.yaml  bench_sweep_zarr3_noshard_chunk128.yaml  bench_sweep_zarr3_shard1024_chunk128.yaml  bench_sweep_zarr3_shard1024_chunk256.yaml  bench_sweep_zarr3_shard512_chunk128.yaml  bench_sweep_zarr3_shard512_chunk256.yaml  bench_sweep_zarr3_shard512_chunk64.yaml  config.yaml  config_h01_only.yaml  config_iso.yaml  config_jiefu_only.yaml  config_noiso.yaml  config_patch256.yaml  config_patch64.yaml  example.ipynb  nisb_base.yaml
scripts/: benchmark_nisb_io.sh
tests/: conftest.py  test_axes.py  test_config.py  test_dataset.py  test_zarr_meta.py
(+12 files in other folders)
