[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miao-io"
version = "0.1.3"
description = "Scalable PyTorch data loaders for OME-NGFF zarr datasets"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "tensorstore>=0.1.60",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "zarr>=2.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/miao"]

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.10"
pytorch = {version = ">=2.0", channel = "pytorch"}

[tool.pixi.pypi-dependencies]
miao-io = {path = ".", editable = true, extras = ["dev"]}

[tool.pixi.tasks]
test = "pytest tests/ -v"

[tool.pytest.ini_options]
testpaths = ["tests"]
